# Deploy-Notebook-To-Production

./: .gitignore  NOTICE  README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python.yml
Ch02/02_02/: rides.ipynb  rides.py  rides2.ipynb
Ch02/02_03/rides/: db.py
Ch02/02_04/: rides.ipynb
Ch02/02_04/rides/: __init__.py  __main__.py  db.py
Ch02/challenge/: logs.ipynb  logs.py
Ch02/solution/: logs.ipynb  logs.py
Ch03/03_02/: rides.ipynb  rides_test.py
Ch03/03_03/: vickrey.py  vickrey_test.py
Ch03/03_04/: conftest.py  rides.py  rides_test.py
Ch03/solution/: tags.py  tags_cases.yml  tags_test.py
Ch04/04_03/: dev-requirements.txt  requirements.txt
Ch04/04_04/: .gitignore  LICENSE.txt  MANIFEST.in  README.md  dev-requirements.txt  outliers.py  outliers_test.py  pyproject.toml
Ch04/challenge/: hike.gpx
Ch04/solution/: dev-requirements.txt  geo.py  geo_test.py  gpx_info.txt  requirements.txt
Ch05/05_01/: app.py
Ch05/05_02/: .secrets.yaml  app.py  config.py  settings.yaml
Ch05/05_03/: 2024-01.csv  bench_test.py  store.parquet  store.py
Ch05/challenge/: montly.ipynb
Ch05/solution/: montly.ipynb
data/: logs.ddb
